[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[ bin ]]
name = "gateway"
path = "src/main.rs"

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]
rust_gpiozero = "0.2.1"
lapin = "2.1.1"
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenv = "0.15.0"
clap = { version = "3.2", features = ["derive"] }
tokio-cron-scheduler = "*"
tokio = { version = "1", features = ["full"] }
cron="0.12.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-case = "2.2.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
